# yt-scribe

./: .gitignore  AGENTS.md  README.md  install-local.ps1  install-local.sh  pyproject.toml  yt_scribe.py  yt_scribe_mcp.py
.agents/plugins/: marketplace.json
.agents/skills/docs-freshness/: state.md
.agents/skills/yt-scribe/: SKILL.md
.agents/skills/yt-scribe-transcript-polisher/: SKILL.md
.agents/skills/yt-scribe-transcript-polisher/agents/: openai.yaml
.agents/skills/yt-scribe-transcript-polisher/harness/: codex.md  opencode.md
.agents/skills/yt-scribe/harness/: codex.md  opencode.md
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
.opencode/agents/: yt-scribe-transcript-polisher.md  yt-scribe.md
.yt-scribe/cache/: dQw4w9WgXcQ-en.json
skills/yt-scribe/: SKILL.md
skills/yt-scribe-transcript-polisher/: SKILL.md
skills/yt-scribe-transcript-polisher/harness/: codex.md  opencode.md
skills/yt-scribe/agents/: openai.yaml
skills/yt-scribe/harness/: codex.md  opencode.md
src/: yt_scribe_mcp.py
src/yt_scribe/: __init__.py  __main__.py  _legacy.py  batch.py  cli.py  config.py  file_io.py  mcp.py  runs.py  setup.py  transcripts.py  verify.py  youtube.py
src/yt_scribe/polish/: __init__.py  chunked.py  deep.py  harnesses.py  instructions.py  workflows.py
tests/: test_batch.py  test_cli.py  test_config.py  test_e2e.py  test_mcp.py  test_package_interface.py  test_polish.py  test_runs.py  test_setup.py  test_transcripts.py  test_verify.py  test_youtube.py  test_yt_scribe.py
